--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
   rstudio:
     build:
       context: .
-      dockerfile: dockerfiles/_docker/Dockerfile
+      dockerfile: _docker/Dockerfile
     image: tidyverse:3.6.3_jp
     container_name: tidyverse_jp
     environment: 
