--- a/_docker/Dockerfile
+++ b/_docker/Dockerfile
@@ -1,6 +1,5 @@
 FROM rocker/tidyverse:latest
 
-# OS環境を日本語ロケールに切り替える
 
 ENV LANG ja_JP.UTF-8
 ENV LC_ALL ja_JP.UTF-8
@@ -11,13 +10,11 @@ RUN sed -i '$d' /etc/locale.gen \
 RUN /bin/bash -c "source /etc/default/locale"
 RUN ln -sf  /usr/share/zoneinfo/Asia/Tokyo /etc/localtime
 
-# 日本語フォントをインストールする
+
 RUN apt-get update && apt-get install -y \
   fonts-ipaexfont \
   fonts-noto-cjk
 
-&& install2.r --error \
-    --deps TRUE \
-    lavaan \
-    semTools \
-    semPlot \
+COPY install_r.r install_r.r
+
+RUN ["r", "install_r.r"]
